--- a/package/Makefile
+++ b/package/Makefile
@@ -115,11 +115,11 @@ package: | package_flight package_ground package_matlab
 
 .PHONY: help uavobjects all_clean package_flight package_ground package
 
-# opfw_resource must be generated before the ground package,
+# tlfw_resource must be generated before the ground package,
 # and it depends on flight firmware images
-ground_package: | opfw_resource
+ground_package: | tlfw_resource
 
-opfw_resource: | all_fw
+tlfw_resource: | all_fw
 
 # Decide on a verbosity level based on the V= parameter
 export AT := @
@@ -148,21 +148,21 @@ ifeq ($(UNAME), Darwin)
 endif
 
 toprel = $(subst $(realpath $(ROOT_DIR))/,,$(abspath $(1)))
-OPFW_FILES := $(foreach fw_targ, $(FW_TARGETS), $(call toprel, $(BUILD_DIR)/$(fw_targ)/$(fw_targ).opfw))
-OPFW_CONTENTS := \
+TLFW_FILES := $(foreach fw_targ, $(FW_TARGETS), $(call toprel, $(BUILD_DIR)/$(fw_targ)/$(fw_targ).tlfw))
+TLFW_CONTENTS := \
 <!DOCTYPE RCC><RCC version="1.0"> \
  <qresource> \
-     $(foreach fw_file, $(OPFW_FILES), <file>$(fw_file)</file>) \
+     $(foreach fw_file, $(TLFW_FILES), <file>$(fw_file)</file>) \
  </qresource> \
 </RCC>
 
-.PHONY: opfw_resource
-opfw_resource:
-	@echo Generating OPFW resource file $(call toprel, $(BUILD_DIR)/ground/$@)
+.PHONY: tlfw_resource
+tlfw_resource:
+	@echo Generating TLFW resource file $(call toprel, $(BUILD_DIR)/ground/$@)
 	$(V1) mkdir -p $(BUILD_DIR)/ground/$@
 	$(V1) mkdir -p $(BUILD_DIR)/ground/$@/build
-	$(V1) echo '$(OPFW_CONTENTS)' > $(BUILD_DIR)/ground/$@/opfw_resource.qrc
+	$(V1) echo '$(TLFW_CONTENTS)' > $(BUILD_DIR)/ground/$@/tlfw_resource.qrc
 	$(V1) $(foreach fw_targ, $(FW_TARGETS), mkdir -p $(BUILD_DIR)/ground/$@/build/$(fw_targ);)
-	$(V1)$(foreach fw_targ, $(FW_TARGETS), cp $(BUILD_DIR)/$(fw_targ)/$(fw_targ).opfw $(BUILD_DIR)/ground/$@/build/$(fw_targ)/;)
+	$(V1)$(foreach fw_targ, $(FW_TARGETS), cp $(BUILD_DIR)/$(fw_targ)/$(fw_targ).tlfw $(BUILD_DIR)/ground/$@/build/$(fw_targ)/;)
 
 include $(WHEREAMI)/Makefile.$(PLATFORM)
