--- a/flight/targets/Revolution/Makefile.osx
+++ b/flight/targets/Revolution/Makefile.osx
@@ -225,6 +225,7 @@ CPPSRCARM =
 
 # List any extra directories to look for include files here.
 #    Each directory must be seperated by a space.
+EXTRAINCDIRS  += $(SHAREDAPIDIR)
 EXTRAINCDIRS  += $(OPSYSTEM)
 EXTRAINCDIRS  += $(OPSYSTEMINC)
 EXTRAINCDIRS  += $(OPUAVTALK)
