--- a/flight/targets/Revolution/Makefile.posix
+++ b/flight/targets/Revolution/Makefile.posix
@@ -5,6 +5,7 @@
 # Makefile for OpenPilot INS project
 #
 # The OpenPilot Team, http://www.openpilot.org, Copyright (C) 2009.
+# Tau Labs, http://www.taulabs.org Copyright (C) 2013.
 #
 #
 # This program is free software; you can redistribute it and/or modify
