Control: Now compiles with Freedom

--- a/flight/targets/Freedom/Makefile
+++ b/flight/targets/Freedom/Makefile
@@ -40,7 +40,7 @@ DEBUG ?= NO
 MODULES = Sensors
 MODULES += Attitude/revolution 
 MODULES += Actuator
-MODULES += ManualControl
+MODULES += Control
 MODULES += Stabilization
 MODULES += FirmwareIAP
 #MODULES += Airspeed/revolution
