--- a/androidgcs/AndroidManifest.xml
+++ b/androidgcs/AndroidManifest.xml
@@ -9,31 +9,28 @@
   		android:required="true"/>
 		
 	<permission
-          android:name="org.abovegroundlabs.androidgcs.permission.MAPS_RECEIVE"
+          android:name="org.taulabs.androidgcs.permission.MAPS_RECEIVE"
           android:protectionLevel="signature"/>
-	<uses-permission android:name="org.abovegroundlabs.androidgcs.permission.MAPS_RECEIVE"/>
+	<uses-permission android:name="org.taulabs.androidgcs.permission.MAPS_RECEIVE"/>
         	
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
 
 	<uses-permission android:name="android.permission.BLUETOOTH" />
 	<uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
-	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>  
-	<uses-feature android:name="android.hardware.usb.host" />
+	<uses-feature android:name="android.hardware.usb.host" android:required="false" />
 	
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/> 
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-	<uses-permission android:name="android.permission.INTERNET" />
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	
 	<application android:icon="@drawable/ic_logo" android:label="@string/app_name" android:theme="@android:style/Theme.Holo">
 		<!-- for map overlay -->
 		<uses-library android:name="com.google.android.maps" />
 		
-		<meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="AIzaSyCKt8QCQGHhNr6FQBepwHe8xxcD-9ScvbM"/>
+		<meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="AIzaSyBaAV9pYtdvqFRlJ6psNH34GpDjejHoV8o"/>
 		
 		<!-- Object browser - main activity at the moment -->
 		<activity android:name="HomePage" android:label="@string/app_name">
