--- a/flight/targets/Revolution/Makefile.posix
+++ b/flight/targets/Revolution/Makefile.posix
@@ -79,7 +79,7 @@ BLONLY_CDEFS += -DFW_DESC_SIZE=$(FW_DESC_SIZE)
 CFLAGS += $(BLONLY_CDEFS)
 
 # List of modules to include
-MODULES += Actuator ManualControl Stabilization 
+MODULES += Actuator Control Stabilization 
 MODULES += PathPlanner
 MODULES += Attitude/revolution
 MODULES += FirmwareIAP
