Control: Get running on all targets

--- a/flight/targets/FlyingF3/Makefile
+++ b/flight/targets/FlyingF3/Makefile
@@ -37,7 +37,7 @@ DEBUG ?= NO
 MODULES = Sensors
 MODULES += Attitude/revolution
 MODULES += Actuator
-MODULES += ManualControl
+MODULES += Control
 MODULES += Stabilization
 #MODULES += Airspeed/revolution
 MODULES += FirmwareIAP
