--- a/flight/targets/FlyingF3/Makefile
+++ b/flight/targets/FlyingF3/Makefile
@@ -42,7 +42,6 @@ MODULES += Stabilization
 #MODULES += Airspeed/revolution
 MODULES += FirmwareIAP
 MODULES += Telemetry
-MODULES += Tests
 
 OPTMODULES += GPS
 OPTMODULES += CameraStab
@@ -225,7 +224,9 @@ CDEFS += -DHSE_VALUE=$(OSCILLATOR_FREQ)
 CDEFS += -DSYSCLK_FREQ=$(SYSCLK_FREQ)
 CDEFS += -DUSE_STDPERIPH_DRIVER
 CDEFS += -DUSE_$(BOARD)
+ifeq ($(ENABLE_DEBUG_CONSOLE), YES)
 CDEFS += -DPIOS_INCLUDE_DEBUG_CONSOLE
+endif
 
 CDEFS += -DEE_BANK_BASE=$(EE_BANK_BASE)
 CDEFS += -DEE_BANK_SIZE=$(EE_BANK_SIZE)
