--- a/flight/targets/OSD/Makefile
+++ b/flight/targets/OSD/Makefile
@@ -192,6 +192,7 @@ SRC += $(PIOSCOMMON)/pios_usb_desc_hid_cdc.c
 SRC += $(PIOSCOMMON)/pios_usb_desc_hid_only.c
 SRC += $(PIOSCOMMON)/pios_usb_util.c
 SRC += $(PIOSCOMMON)/pios_sdcard.c
+SRC += $(PIOSCOMMON)/pios_adc.c
 
 # optional component libraries
 include $(PIOSCOMMONLIB)/FreeRTOS/library.mk
