Sparky: Cleanup and sync files to FlyingF3
Some various FreeRTOS and configuration changes since I
started from the FlyingF3 branch.

--- a/flight/targets/Sparky/Makefile
+++ b/flight/targets/Sparky/Makefile
@@ -1,6 +1,6 @@
 ###############################################################################
 # @file       Makefile
-# @author     PhoenixPilot, http://github.com/PhoenixPilot, Copyright (C) 2013.
+# @author     Tau Labs, http://github.com/TauLabs, Copyright (C) 2013.
 # @addtogroup
 # @{
 # @addtogroup
@@ -32,15 +32,6 @@ include $(TOP)/make/boards/$(BOARD_NAME)/board-info.mk
 # Set to YES for debugging
 DEBUG ?= NO
 
-# Set to YES when using Code Sourcery toolchain
-CODE_SOURCERY ?= NO
-
-ifeq ($(CODE_SOURCERY), YES)
-REMOVE_CMD = cs-rm
-else
-REMOVE_CMD = rm
-endif
-
 # List of modules to include
 MODULES = Sensors
 MODULES += Attitude/revolution
@@ -60,6 +51,7 @@ OPTMODULES += AltitudeHold
 OPTMODULES += PathPlanner
 OPTMODULES += VtolPathFollower
 OPTMODULES += FixedWingPathFollower
+OPTMODULES += VibrationAnalysis
 #OPTMODULES += Battery
 #OPTMODULES += ComUsbBridge
 
@@ -278,9 +270,6 @@ CFLAGS += $(patsubst %,-I%,$(EXTRAINCDIRS)) -I.
 CFLAGS += -mapcs-frame
 CFLAGS += -fomit-frame-pointer
 CFLAGS += -ffunction-sections -fdata-sections
-ifeq ($(CODE_SOURCERY), YES)
-CFLAGS += -fpromote-loop-indices
-endif
 
 CFLAGS += -Wall
 CFLAGS += -Werror
