--- a/flight/targets/Sparky/Makefile
+++ b/flight/targets/Sparky/Makefile
@@ -36,7 +36,7 @@ DEBUG ?= NO
 MODULES = Sensors
 MODULES += Attitude/revolution
 MODULES += Actuator
-MODULES += ManualControl
+MODULES += Control
 MODULES += Stabilization
 #MODULES += Airspeed/revolution
 MODULES += FirmwareIAP
