Android: Add new Attitude Adjustment page
Currently just stub, but this is designed to make it
easy to refine some of the attitude settings easily.

--- a/androidgcs/AndroidManifest.xml
+++ b/androidgcs/AndroidManifest.xml
@@ -39,18 +39,19 @@
 <!--                 android:resource="@xml/device_filter" /> -->
 		</activity>
 
+		<activity android:name="AttitudeAdjustment" android:label="@string/attitude_adjustment" />
 		<activity android:name="ObjectBrowser" android:label="@string/object_browser_name" />
-		<activity android:name="PfdActivity" android:label="PFD" />
+		<activity android:name="PfdActivity" android:label="@string/pfd" />
 		<activity android:name="Controller" android:label="@string/controller_name" />
 		<activity android:name="Preferences" android:label="@string/preference_title" />
 		<activity android:name="UAVLocation" android:label="@string/location_name" />
 		<activity android:name="SystemAlarmActivity" android:label="System Alarms" />
 		<activity android:name="TuningActivity" android:label="Tuning" />
-		<activity android:name="PathPlanner" android:label="Path Planner" />
-		<activity android:name="Transmitter" android:label="Transmitter"/> <!-- android:hardwareAccelerated="false" -->
-				<activity android:name="ObjectEditor" android:label="ObjectEditor"
+		<activity android:name="PathPlanner" android:label="@string/path_planner" />
+		<activity android:name="Transmitter" android:label="@string/transmitter"/> <!-- android:hardwareAccelerated="false" -->
+				<activity android:name="ObjectEditor" android:label="@string/objecteditor"
 			android:theme="@android:style/Theme.Dialog" />
-		<activity android:name="Logger" android:label="Logger"/>
+		<activity android:name="Logger" android:label="@string/logger"/>
 
 		<activity
 		    android:name="FragmentTester"
