Ground Path Follower: Enable for all appropriate targets

--- a/flight/targets/FlyingF4/Makefile
+++ b/flight/targets/FlyingF4/Makefile
@@ -48,6 +48,7 @@ OPTMODULES += PathPlanner
 OPTMODULES += AltitudeHold 
 OPTMODULES += VtolPathFollower 
 OPTMODULES += FixedWingPathFollower
+OPTMODULES += GroundPathFollower
 OPTMODULES += CameraStab
 OPTMODULES += Autotune
 OPTMODULES += TxPID
