Control: Rename back to ManualControl
Control is ambiguous with control theory so sticking
with the previous name.

--- a/flight/targets/FlyingF3/Makefile
+++ b/flight/targets/FlyingF3/Makefile
@@ -40,7 +40,7 @@ DEBUG ?= NO
 MODULES = Sensors
 MODULES += Attitude/revolution
 MODULES += Actuator
-MODULES += Control
+MODULES += ManualControl
 MODULES += Stabilization
 #MODULES += Airspeed/revolution
 MODULES += FirmwareIAP
