--- a/flight/targets/FlyingF4/Makefile
+++ b/flight/targets/FlyingF4/Makefile
@@ -37,7 +37,7 @@ DEBUG ?= NO
 MODULES = Sensors
 MODULES += Attitude/revolution 
 MODULES += Actuator
-MODULES += Control
+MODULES += ManualControl
 MODULES += Stabilization
 MODULES += FirmwareIAP
 #MODULES += Airspeed/revolution
