--- a/flight/targets/Revolution/Makefile.posix
+++ b/flight/targets/Revolution/Makefile.posix
@@ -173,6 +173,7 @@ include $(PIOS)/posix/library.mk
 
 ## PIOS Hardware (Common)
 SRC += $(PIOSPOSIX)/pios_flashfs_logfs.c
+SRC += $(PIOSPOSIX)/../../tests/logfs/pios_flash_ut.c
 #SRC += $(PIOSCOMMON)/pios_mpu6000.c
 #SRC += $(PIOSCOMMON)/pios_bma180.c
 #SRC += $(PIOSCOMMON)/pios_l3gd20.c
