flyingf4: enable usbcombridge module

--- a/flight/targets/FlyingF4/Makefile
+++ b/flight/targets/FlyingF4/Makefile
@@ -54,7 +54,7 @@ OPTMODULES += Autotune
 OPTMODULES += TxPID
 OPTMODULES += VibrationAnalysis
 #OPTMODULES += Battery
-#OPTMODULES += ComUsbBridge
+OPTMODULES += ComUsbBridge
 
 
 # Paths
