quanton: add adc support on receiver port

--- a/flight/targets/Quanton/Makefile
+++ b/flight/targets/Quanton/Makefile
@@ -53,7 +53,7 @@ OPTMODULES += Autotune
 OPTMODULES += TxPID
 OPTMODULES += VibrationAnalysis
 OPTMODULES += UAVOMavlinkBridge
-#OPTMODULES += Battery
+OPTMODULES += Battery
 OPTMODULES += ComUsbBridge
 
 # Paths
