Moved path manager switching algorithms to library.

--- a/flight/targets/flyingf3/fw/Makefile
+++ b/flight/targets/flyingf3/fw/Makefile
@@ -122,6 +122,8 @@ SRC += $(FLIGHTLIB)/paths.c
 SRC += $(FLIGHTLIB)/CoordinateConversions.c
 SRC += $(FLIGHTLIB)/path_planners/direct.c
 SRC += $(FLIGHTLIB)/path_planners/direct_with_filleting.c
+SRC += $(FLIGHTLIB)/path_managers/b_ball.c
+SRC += $(FLIGHTLIB)/path_managers/half_plane.c
 SRC += $(FLIGHTLIB)/path_followers/constant_radius_arc/simple_arc.c
 SRC += $(FLIGHTLIB)/path_followers/constant_radius_arc/roll_limited_arc.c
 SRC += $(FLIGHTLIB)/path_followers/straight_line/simple_line.c
