Sparky: comment fixes from review feedback

--- a/flight/targets/Bootloaders/Sparky/Makefile
+++ b/flight/targets/Bootloaders/Sparky/Makefile
@@ -1,6 +1,6 @@
 ###############################################################################
 # @file       Makefile
-# @author     PhoenixPilot, http://github.com/PhoenixPilot, Copyright (C) 2013
+# @author     Tau Labs, http://github.com/TauLabs, Copyright (C) 2013
 # @addtogroup 
 # @{
 # @addtogroup 
