--- a/flight/targets/Quanton/Makefile
+++ b/flight/targets/Quanton/Makefile
@@ -35,7 +35,7 @@ DEBUG ?= NO
 
 # List of modules to include
 MODULES = Sensors
-MODULES += Attitude/revolution 
+MODULES += StateEstimation/default 
 MODULES += Actuator
 MODULES += ManualControl
 MODULES += Stabilization
