--- a/flight/targets/Revolution/Makefile.osx
+++ b/flight/targets/Revolution/Makefile.osx
@@ -45,7 +45,7 @@ USE_BOOTLOADER ?= NO
 
 # List of modules to include
 MODULES += Actuator ManualControl Stabilization 
-MODULES += Attitude/revolution
+MODULES += StateEstimation/default
 MODULES += FirmwareIAP
 
 OPTMODULES += PathPlanner
