Sparky: enable battery module (and comusbbridge)

--- a/flight/targets/Sparky/Makefile
+++ b/flight/targets/Sparky/Makefile
@@ -53,8 +53,8 @@ OPTMODULES += VtolPathFollower
 OPTMODULES += FixedWingPathFollower
 OPTMODULES += VibrationAnalysis
 OPTMODULES += UAVOMavlinkBridge
-#OPTMODULES += Battery
-#OPTMODULES += ComUsbBridge
+OPTMODULES += Battery
+OPTMODULES += ComUsbBridge
 
 # Paths
 OPSYSTEM = ./System
