--- a/package/linux/deb_i386/control
+++ b/package/linux/deb_i386/control
@@ -5,8 +5,8 @@ Maintainer: peabody124 <peabody124@gmail.com>
 Build-Depends: debhelper (>= 7.0.50~)
 Standards-Version: 3.8.4
 Homepage: http://taulabs.org
-Vcs-Git: git://github.com/PhoenixPilot/PhoenixPilot.git
-Vcs-Browser: https://github.com/PhoenixPilot/PhoenixPilot/commits/next 
+Vcs-Git: git://github.com/TauLabs/TauLabs.git
+Vcs-Browser: https://github.com/TauLabs/TauLabs/commits/next 
 
 Package: taulabs
 Architecture: i386
