--- a/flight/targets/Sparky/Makefile
+++ b/flight/targets/Sparky/Makefile
@@ -1,6 +1,6 @@
 ###############################################################################
 # @file       Makefile
-# @author     Tau Labs, http://github.com/TauLabs, Copyright (C) 2013.
+# @author     Tau Labs, http://taulabs.org, Copyright (C) 2013
 # @addtogroup
 # @{
 # @addtogroup
