Flight FlyingF3-Enabled the battery module

--- a/flight/targets/FlyingF3/Makefile
+++ b/flight/targets/FlyingF3/Makefile
@@ -58,7 +58,7 @@ OPTMODULES += FixedWingPathFollower
 OPTMODULES += GroundPathFollower
 OPTMODULES += VibrationAnalysis
 OPTMODULES += UAVOMavlinkBridge
-#OPTMODULES += Battery
+OPTMODULES += Battery
 #OPTMODULES += ComUsbBridge
 
 # Paths
