Move coordinate conversion into the math library

--- a/flight/targets/CopterControl/Makefile
+++ b/flight/targets/CopterControl/Makefile
@@ -299,7 +299,6 @@ SRC += $(PIOSCOMMON)/pios_pcf8591_adc.c
 endif
 ## Libraries for flight calculations
 SRC += $(FLIGHTLIB)/fifo_buffer.c
-SRC += $(FLIGHTLIB)/CoordinateConversions.c
 SRC += $(FLIGHTLIB)/taskmonitor.c
 SRC += $(FLIGHTLIB)/sanitycheck.c
 ifeq ($(NAVIGATION), YES)
@@ -307,6 +306,7 @@ SRC += $(STATEESTIMATIONLIB)/ccc.c
 SRC += $(STATEESTIMATIONLIB)/premerlani_gps.c
 SRC += $(STATEESTIMATIONLIB)/premerlani_dcm.c
 endif
+SRC += $(MATHLIB)/coordinate_conversions.c
 SRC += $(MATHLIB)/sin_lookup.c
 SRC += $(MATHLIB)/misc_math.c
 SRC += $(MATHLIB)/pid.c
