--- a/flight/targets/PipXtreme/Makefile
+++ b/flight/targets/PipXtreme/Makefile
@@ -163,7 +163,7 @@ SRC += $(PIOSCOMMON)/pios_rfm22b.c
 SRC += $(PIOSCOMMON)/pios_rfm22b_com.c
 ## Libraries for flight calculations
 SRC += $(FLIGHTLIB)/fifo_buffer.c
-SRC += $(FLIGHTLIB)/CoordinateConversions.c
+SRC += $(MATHLIB)/coordinate_conversions.c
 SRC += $(FLIGHTLIB)/taskmonitor.c
 SRC += $(FLIGHTLIB)/aes.c
 ## The Reed-Solomon FEC library
