Makefile: add MATHLIB and FILTERLIB paths

--- a/flight/targets/coptercontrol/fw/Makefile
+++ b/flight/targets/coptercontrol/fw/Makefile
@@ -128,8 +128,7 @@ OPTESTS  = ./Tests
 FLIGHTLIBINC = $(FLIGHTLIB)/inc
 STATEESTIMATIONLIB = $(FLIGHTLIB)/StateEstimationFilters
 STATEESTIMATIONLIBINC = $(STATEESTIMATIONLIB)/inc
-MATHLIB = $(FLIGHTLIB)/math
-MATHLIBINC = $(FLIGHTLIB)/math
+MATHLIBINC = $(MATHLIB)
 PIOSINC = $(PIOS)/inc
 PIOSSTM32F10X = $(PIOS)/STM32F10x
 PIOSCOMMON = $(PIOS)/Common
