StateEstimation UAVO: rename to StateFilter
This creates room for the StateEstimation module

--- a/flight/targets/Sparky/Makefile
+++ b/flight/targets/Sparky/Makefile
@@ -35,6 +35,7 @@ DEBUG ?= NO
 # List of modules to include
 MODULES = Sensors
 #MODULES += Attitude/revolution
+MODULES += StateEstimation
 MODULES += Actuator
 MODULES += ManualControl
 MODULES += Stabilization
