--- a/flight/targets/revolution/fw/Makefile.posix
+++ b/flight/targets/revolution/fw/Makefile.posix
@@ -79,7 +79,8 @@ CFLAGS += $(BLONLY_CDEFS)
 
 # List of modules to include
 MODULES += Actuator ManualControl Stabilization 
-MODULES += Attitude
+MODULES += PathPlanner
+MODULES += StateEstimation
 MODULES += FirmwareIAP
 
 OPTMODULES += PathPlanner
@@ -104,6 +105,7 @@ PIOSINC = $(PIOS)/inc
 FLIGHTLIBINC = $(FLIGHTLIB)/inc
 MATHLIB = $(FLIGHTLIB)/math
 MATHLIBINC = $(MATHLIB)
+FILTERLIBINC = $(FILTERLIB)
 PIOSPOSIX = $(PIOS)/posix
 PIOSCOMMON = $(ROOT_DIR)/flight/PiOS/Common
 PIOSBOARDS = $(PIOS)/Boards
@@ -146,6 +148,11 @@ SRC += $(MATHLIB)/coordinate_conversions.c
 SRC += $(MATHLIB)/sin_lookup.c
 SRC += $(MATHLIB)/misc_math.c
 SRC += $(MATHLIB)/pid.c
+
+## Enable some filters
+SRC += $(FILTERLIB)/dcm_interface.c
+SRC += $(FILTERLIB)/filter_infrastructure_se3.c
+SRC += $(FILTERLIB)/filter_interface.c
 
 ## PIOS Hardware (STM32F4xx)
 include $(PIOS)/posix/library.mk
@@ -214,6 +221,8 @@ EXTRAINCDIRS  += $(OPUAVSYNTHDIR)
 EXTRAINCDIRS  += $(FLIGHTLIBINC)
 EXTRAINCDIRS  += $(MATHLIBINC)
 
+EXTRAINCDIRS  += $(FILTERINC)
+#EXTRAINCDIRS  += $(PIOSSTM32F4XX)
 EXTRAINCDIRS  += $(PIOSCOMMON)
 
 EXTRAINCDIRS  += $(CMSISDIR)
