FlyingF3: Enable ComBridge module

--- a/flight/targets/FlyingF3/Makefile
+++ b/flight/targets/FlyingF3/Makefile
@@ -59,7 +59,7 @@ OPTMODULES += GroundPathFollower
 OPTMODULES += VibrationAnalysis
 OPTMODULES += UAVOMavlinkBridge
 OPTMODULES += Battery
-#OPTMODULES += ComUsbBridge
+OPTMODULES += ComUsbBridge
 
 # Paths
 OPSYSTEM = ./System
