UAVORelay: add to TaskInfo and enable in Sparky

--- a/flight/targets/Sparky/Makefile
+++ b/flight/targets/Sparky/Makefile
@@ -55,6 +55,7 @@ OPTMODULES += VibrationAnalysis
 OPTMODULES += UAVOMavlinkBridge
 OPTMODULES += Battery
 OPTMODULES += ComUsbBridge
+OPTMODULES += UAVORelay
 
 # Paths
 OPSYSTEM = ./System
