Add target support for geofencing.
Changed explicit enum types for unit8_t because posix compilation was
failing.

--- a/flight/targets/FlyingF3/Makefile
+++ b/flight/targets/FlyingF3/Makefile
@@ -58,6 +58,7 @@ OPTMODULES += FixedWingPathFollower
 OPTMODULES += GroundPathFollower
 OPTMODULES += VibrationAnalysis
 OPTMODULES += UAVOMavlinkBridge
+OPTMODULES += GeoFence
 OPTMODULES += Battery
 #OPTMODULES += ComUsbBridge
 
