--- a/flight/targets/FlyingF4/Makefile
+++ b/flight/targets/FlyingF4/Makefile
@@ -54,6 +54,7 @@ OPTMODULES += Autotune
 OPTMODULES += TxPID
 OPTMODULES += VibrationAnalysis
 OPTMODULES += UAVOMavlinkBridge
+OPTMODULES += GeoFence
 #OPTMODULES += Battery
 OPTMODULES += ComUsbBridge
 
