--- a/flight/targets/Revolution/Makefile
+++ b/flight/targets/Revolution/Makefile
@@ -79,6 +79,7 @@ OPTMODULES += CameraStab
 OPTMODULES += OveroSync
 OPTMODULES += Autotune
 OPTMODULES += TxPID
+OPTMODULES += GeoFence
 OPTMODULES += Battery
 OPTMODULES += VibrationAnalysis
 
