Added new TrimAngles UAVO to all targets.

--- a/flight/targets/CopterControl/Makefile
+++ b/flight/targets/CopterControl/Makefile
@@ -245,7 +245,8 @@ SRC += $(OPUAVSYNTHDIR)/sensorsettings.c
 SRC += $(OPUAVSYNTHDIR)/flightbatterystate.c
 SRC += $(OPUAVSYNTHDIR)/flightbatterysettings.c
 SRC += $(OPUAVSYNTHDIR)/adcrouting.c
-
+SRC += $(OPUAVSYNTHDIR)/trimanglessettings.c
+SRC += $(OPUAVSYNTHDIR)/trimangles.c
 endif
 
 ## PIOS Hardware (STM32F10x)
